Tests/CompilerTests/negative/no-given-3.hylo
//! no-std

fun check<T>(x: T) {}

fun f<where let u: Void>() {
  g()
}

fun g<where let u: Void>() {
  check<Void>(u)
}

fun h() {
  f()
}

public fun main() {
  given Void = ()
  f()
}
